# cdt-ods-disaster-recovery

./: .dockerignore  .env.sample  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  404.html  LICENSE  README.md  compose.yml  data.json  endpoint.json  index.html  manage.py  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: codeql.yml  deploy.yml  mkdocs.yml  tests-pytest.yml
appcontainer/: Dockerfile  gunicorn.conf.py  nginx.conf
appcontainer/certs/: README.md
azure_functions/: Dockerfile  function_app.py  requirements.txt  test_alert.sh  test_payload.json
concepts/: index.html
development/: index.html
docs/: .pages  README.md  index.md  requirements.txt
docs/concepts/: index.md
docs/development/: README.md
docs/guides/: .pages  development.md  hotfix.md  infrastructure.md  release.md  rollback.md
docs/reference/: .pages  analytics.md  application-logic.md  commits-branches-merging.md  infrastructure.md  terraform.md
guides/development/: index.html
guides/hotfix/: index.html
guides/infrastructure/: index.html
guides/release/: index.html
guides/rollback/: index.html
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_0aab986bcf93215f_ensure_db_py.html  z_0aab986bcf93215f_reset_db_py.html  z_0ece547b7173a0d6_0001_initial_py.html  z_11eeed2caea0d837_admin_py.html  z_11eeed2caea0d837_apps_py.html  z_11eeed2caea0d837_forms_py.html  z_11eeed2caea0d837_hooks_py.html  z_11eeed2caea0d837_mixins_py.html  z_11eeed2caea0d837_models_py.html  z_11eeed2caea0d837_routes_py.html  z_11eeed2caea0d837_session_py.html  z_11eeed2caea0d837_tasks_py.html  z_11eeed2caea0d837_urls_py.html  z_11eeed2caea0d837_views_py.html  z_15cbab4199471de8_birth_py.html  z_15cbab4199471de8_common_py.html  z_15cbab4199471de8_death_py.html  z_15cbab4199471de8_marriage_py.html  z_19049b6bffd8f6dd_form_helpers_py.html  z_344740d5411a3d82_0001_initial_py.html  z_42b31050807f4836___init___py.html  z_42b31050807f4836_userflow_py.html  z_4b66ee5c6397d3d3_admin_py.html  z_4b66ee5c6397d3d3_apps_py.html  z_4b66ee5c6397d3d3_context_processors_py.html  z_4b66ee5c6397d3d3_hooks_py.html  z_4b66ee5c6397d3d3_middleware_py.html  z_4b66ee5c6397d3d3_models_py.html  z_4b66ee5c6397d3d3_session_py.html  z_4b66ee5c6397d3d3_tasks_py.html  z_4b66ee5c6397d3d3_urls_py.html  z_4b66ee5c6397d3d3_views_py.html  z_6033a2ac61633e16_form_helpers_py.html  z_6a31816d04deed5f___init___py.html  z_6a31816d04deed5f_monitoring_py.html  z_6a31816d04deed5f_secrets_py.html  (+52 more)
reference/analytics/: index.html
reference/application-logic/: index.html
reference/commits-branches-merging/: index.html
reference/infrastructure/: index.html
reference/terraform/: index.html
search/: search_index.json
terraform/: .gitignore  .terraform.lock.hcl  README.md  alerts.tf  app_service.tf  azure-pipelines.yml  container_app.tf  db.tf  email.tf  environment.tf  gateway.tf  init.sh  key_vault.tf  main.tf  modules.tf  monitor.tf  network.tf  output.tf  restart-app.sh  security.tf  storage.tf  terraform.tfvars.sample  uptime.tf  variables.tf  web.tf  worker.tf
terraform/modules/app_gateway/: identities.tf  main.tf  monitoring.tf  outputs.tf  variables.tf
terraform/modules/application/: app_functions.tf  app_web.tf  app_worker.tf  environments.tf  identities.tf  network.tf  outputs.tf  secrets.tf  variables.tf
terraform/modules/database/: main.tf  monitoring.tf  network.tf  outputs.tf  secrets.tf  variables.tf
terraform/modules/email/: main.tf  monitoring.tf  outputs.tf  secrets.tf  variables.tf
terraform/modules/key_vault/: access.tf  main.tf  monitoring.tf  network.tf  outputs.tf  variables.tf
terraform/modules/monitoring/: main.tf  outputs.tf  variables.tf
terraform/modules/network/: main.tf  monitoring.tf  nat_gateway.tf  outputs.tf  security_groups.tf  subnets.tf  variables.tf
terraform/modules/storage/: main.tf  monitoring.tf  network.tf  outputs.tf  variables.tf
terraform/pipeline/: deploy.yml  tags.py  workspace.py
terraform/secrets/: README.md  file.sh  read.sh  value.sh
terraform/uptime/: webtest.xml
tests/azure_functions/: conftest.py  test_function_app.py
tests/pytest/: conftest.py  run.sh  test_monitoring.py
tests/pytest/azure_functions/: conftest.py  test_function_app.py
tests/pytest/core/: test_session.py  test_views.py
tests/pytest/vital_records/: test_forms.py  test_mixins.py  test_models.py  test_session.py  test_tasks.py  test_views.py
tests/pytest/web/: test_monitoring.py
tests/web/: conftest.py  settings.py
tests/web/core/: test_middleware_healthcheck.py  test_session.py
tests/web/vital_records/: test_session.py  test_views.py
web/: __init__.py  monitoring.py  secrets.py  settings.py  urls.py  wsgi.py
web/core/: admin.py  apps.py  context_processors.py  hooks.py  models.py  session.py  tasks.py  urls.py  views.py
web/core/admin/: __init__.py  userflow.py
web/core/migrations/: 0001_initial.py  0002_vitalrecordsrequest.py  0003_alter_vitalrecordsrequest_id.py  0003_vitalrecordsrequest_legal_attestation_and_more.py  (+4 more)
web/core/models/: __init__.py  (+1 more)
web/oauth/: admin.py  apps.py  claims.py  client.py  models.py  redirects.py  routes.py  session.py  urls.py  views.py
web/templates/: 403.html  404.html  500.html  error_base.html
web/vital_records/: admin.py  apps.py  forms.py  hooks.py  mixins.py  models.py  routes.py  session.py  tasks.py  urls.py  views.py
web/vitals/: apps.py  urls.py
(+97 files in other folders)
