[project]
name = "cdt-disaster-recovery"
dynamic = ["version"]
description = "State of California Digital Disaster Recovery Center."
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["Programming Language :: Python :: 3 :: Only"]
requires-python = ">=3.12"
maintainers = [{ name = "Compiler LLC", email = "dev@compiler.la" }]
dependencies = [
    "django-cdt-identity @ git+https://github.com/Office-of-Digital-Services/django-cdt-identity.git@main",
    "Django==5.1.7",
    "gunicorn==23.0.0",
    "requests==2.32.3",
]

[project.optional-dependencies]
dev = ["black", "djlint", "flake8", "pre-commit", "setuptools_scm>=8"]
test = ["coverage", "pytest", "pytest-django", "pytest-mock", "pytest-socket"]

[project.urls]
Code = "https://github.com/Office-of-Digital-Services/cdt-ods-disaster-recovery"
Issues = "https://github.com/Office-of-Digital-Services/cdt-ods-disaster-recovery/issues"

[build-system]
requires = ["setuptools>=75", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 127
target-version = ["py312"]
include = '\.pyi?$'

[tool.coverage.run]
branch = true
relative_files = true
source = ["web"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "web.settings"

[tool.setuptools.packages.find]
include = ["web*"]
namespaces = false

[tool.setuptools_scm]
# intentionally left blank, but we need the section header to activate the tool
