[project]
name = "cdt-disaster-recovery"
dynamic = ["version"]
description = "State of California Digital Disaster Recovery Center."
readme = "README.md"
license-files = ["LICENSE"]
classifiers = ["Programming Language :: Python :: 3 :: Only"]
requires-python = ">=3.12"
maintainers = [{ name = "Compiler LLC", email = "dev@compiler.la" }]
dependencies = [
    "azure-monitor-opentelemetry==1.8.0",
    "Django==5.2.7",
    "django-azure-communication-email==1.3.2",
    "django-cdt-identity @ git+https://github.com/Office-of-Digital-Services/django-cdt-identity.git@c635773a75e7f184a9382748afcef6d5a705b2d6",
    "django-csp==3.8",
    "django-fsm-2==4.0.0",
    "django-google-sso==8.0.0",
    "django-q2==1.8.0",
    "gunicorn==23.0.0",
    "opentelemetry-instrumentation-psycopg==0.57b0",
    "psycopg[binary,pool]==3.2.10",
    "pypdf==6.0.0",
    "requests==2.32.5",
]

[project.optional-dependencies]
dev = [
    "black",
    "blessed",
    "djlint",
    "flake8",
    "pre-commit",
    "setuptools_scm>=8",
]
test = ["coverage", "pytest", "pytest-django", "pytest-mock", "pytest-socket"]

[project.urls]
Code = "https://github.com/Office-of-Digital-Services/cdt-ods-disaster-recovery"
Issues = "https://github.com/Office-of-Digital-Services/cdt-ods-disaster-recovery/issues"

[build-system]
requires = ["setuptools>=75", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 127
target-version = ["py312"]
include = '\.pyi?$'

[tool.coverage.run]
branch = true
relative_files = true
source = ["web"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.pytest.settings"

# This section ensures setuptools is fully aware that non-code files within
# these packages should be bundled
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["web*"]
namespaces = false

[tool.setuptools_scm]
# intentionally left blank, but we need the section header to activate the tool
