[project]
name = "cdt-disaster-recovery"
dynamic = ["version"]
description = "State of California Digital Disaster Recovery Center."
readme = "README.md"
license-files = ["LICENSE"]
classifiers = ["Programming Language :: Python :: 3 :: Only"]
requires-python = ">=3.12"
maintainers = [{ name = "Compiler LLC", email = "dev@compiler.la" }]
dependencies = [
    "azure-monitor-opentelemetry==1.8.1",
    "Django==5.2.11",
    "django-azure-communication-email==1.6.0",
    "django-cdt-identity @ git+https://github.com/Office-of-Digital-Services/django-cdt-identity.git@c635773a75e7f184a9382748afcef6d5a705b2d6",
    "django-csp==3.8",
    "django-fsm-2==4.1.0",
    "django-google-sso==9.0.2",
    "django-q2==1.9.0",
    "gunicorn==24.1.1",
    "opentelemetry-instrumentation-psycopg==0.59b0",
    "psycopg[binary,pool]==3.3.2",
    "pypdf==6.7.0",
    "requests==2.32.5",
]

[project.optional-dependencies]
dev = [
    "black",
    "blessed",
    "djlint",
    "flake8",
    "pre-commit",
    "setuptools_scm>=8",
]
test = ["coverage", "pytest", "pytest-django", "pytest-mock", "pytest-socket"]

[project.urls]
Code = "https://github.com/Office-of-Digital-Services/cdt-ods-disaster-recovery"
Issues = "https://github.com/Office-of-Digital-Services/cdt-ods-disaster-recovery/issues"

[build-system]
requires = ["setuptools>=75", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 127
target-version = ["py312"]
include = '\.pyi?$'

[tool.coverage.run]
branch = true
relative_files = true
source = ["web", "azure_functions"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.web.settings"

# This section ensures setuptools is fully aware that non-code files within
# these packages should be bundled
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["web*"]
namespaces = false

[tool.setuptools_scm]
# intentionally left blank, but we need the section header to activate the tool
